Fixed TodayView initilising bug. Added css for TodayView. Changed setVisibility from individual components to Parents in PhantomController.

--- a/src/gui/view/DarkTheme.css
+++ b/src/gui/view/DarkTheme.css
@@ -59,7 +59,7 @@
     -fx-background-color: transparent;
 }
 
-.table-view .column-header, .table-view .filler, #table-today .column-header {
+.table-view .column-header, .table-view .filler, #table-today .column-header, #table-today .filler{
     -fx-border-width: 0 0 1 0;
     -fx-background-color: transparent;
     -fx-border-color: 
@@ -70,7 +70,7 @@
     -fx-border-insets: 0 10 1 0;
 }
 
-.table-view .column-header .label, #table-today .column-header .label {
+.table-view .column-header .label, #table-today .column-header .label{
     -fx-font-size: 14pt;
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
